# csim

./: .gitignore  CMakeLists.txt  evalgen.py  index.html  tracegen.py
docs/: index.html
evaluation_results/: processed_results.csv  raw_results.json
evaluation_results/protocol_analysis/: protocol_analysis.json
include/: argparser.hpp  bus.hpp  busmsg.hpp  cache.h  cache.hpp  cpu.hpp  cpumsg.hpp  directory.hpp  dirmsg.hpp  globals.hpp  intercon.hpp  interconnect.hpp  memory.hpp  memreq.hpp  statistics.hpp  trace.hpp
our_traces/false_sharing/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
our_traces/multiple_readers/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
our_traces/multiple_writers/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
our_traces/no_sharing/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
our_traces/partial_proc_use_1/: 1.txt
our_traces/producer_consumer copy/: 1.txt  3.txt  5.txt
our_traces/producer_consumer_high_sharers/: 0.txt  2.txt  4.txt  6.txt  7.txt
our_traces/producer_consumer_low_sharers/: 0.txt
our_traces/random/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
our_traces/temp/: 0.txt  1.txt
src/: argparser.cpp  bus.cpp  busmsg.cpp  cache.cpp  cpu.cpp  cpumsg.cpp  directory.cpp  dirmsg.cpp  globals.cpp  intercon.cpp  main.cpp  memory.cpp  memreq.cpp  statistics.cpp  trace.cpp
traces/: 0.txt  1.txt  2.txt  3.txt
traces/false_sharing_traces/: 0.txt  1.txt  2.txt  3.txt
traces/multiple_reader_traces/: 2.txt
traces/multiple_writer_traces/: 0.txt
traces/no_sharing_traces/: 0.txt  1.txt  2.txt  3.txt
traces/producer_consumer_traces/: 0.txt  1.txt
traces/random_traces/: 0.txt  1.txt  2.txt  3.txt
